--- a/MoviePlus.Application/MoviePlus.Application.csproj
+++ b/MoviePlus.Application/MoviePlus.Application.csproj
@@ -8,4 +8,9 @@
     <ProjectReference Include="..\MoviePlus.Domain\MoviePlus.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Searches\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
 </Project>
