--- a/MoviePlus.API/MoviePlus.API.csproj
+++ b/MoviePlus.API/MoviePlus.API.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MoviePlus.Application\MoviePlus.Application.csproj" />
     <ProjectReference Include="..\MoviePlus.DataAccess\MoviePlus.DataAccess.csproj" />
     <ProjectReference Include="..\MoviePlus.Domain\MoviePlus.Domain.csproj" />
