--- a/MoviePlus.DataAccess/MoviePlus.DataAccess.csproj
+++ b/MoviePlus.DataAccess/MoviePlus.DataAccess.csproj
@@ -11,6 +11,8 @@
     <Compile Remove="Migrations\20200623144052_set current date.Designer.cs" />
     <Compile Remove="Migrations\20200624094625_all db configurations.cs" />
     <Compile Remove="Migrations\20200624094625_all db configurations.Designer.cs" />
+    <Compile Remove="Migrations\20200625140854_many to many.cs" />
+    <Compile Remove="Migrations\20200625140854_many to many.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
